@@ -1,6 +1,7 @@
 `plot.ordisurf` <- function(x, what = c("contour","persp","gam"),
                             add = FALSE, bubble = FALSE, col = "red", cex = 1,
-                            nlevels = 10, levels, labcex = 0.6, ...) {
+                            nlevels = 10, levels, labcex = 0.6,
+                            lwd.cl = par("lwd"), ...) {
     what <- match.arg(what)
     y <- x$model$y
     x1 <- x$model$x1
@@ -23,7 +24,8 @@
             levels <- pretty(range(x$grid$z, finite = TRUE), nlevels)
         contour(X, Y, Z, col = col, add = TRUE,
                 levels = levels, labcex = labcex,
-                drawlabels = !is.null(labcex) && labcex > 0)
+                drawlabels = !is.null(labcex) && labcex > 0,
+                lwd = lwd.cl)
     } else if(isTRUE(all.equal(what, "persp"))) {
         persp(X, Y, Z, col = col, cex = cex, ...)
     } else {
